# servant-serf

./: CHANGELOG.markdown  LICENSE  LICENSE.markdown  README.markdown  README.md  package.yaml  servant-serf.cabal  stack.yaml
.devcontainer/: compose.yaml  devcontainer.json
.github/workflows/: ci.yaml  hlint.yaml  ormolu.yaml
app/: ApiModule.hs  Main.hs  Options.hs  Regex.hs
servant-serf-example/: .servant-serf.toml  Ex.hs  package.yaml  servant-serf-example.cabal
servant-serf-example/src/: Foo.hs
servant-serf-example/src/Foo/: Api.hs
servant-serf-example/src/Foo/Handler/: GoodbyeWorld.hs  HelloWorld.hs
source/executable/: Main.hs
