cabal-version: 2.0

name: servant-serf
version: 0.3.0.0
synopsis: Automatically generate Servant API modules.
description:
  servant-serf is a preprocessor that automatically generates Servant API
  modules. It is similar to the @hspec-discover@ package.

build-type: Simple
category: Web
extra-source-files: CHANGELOG.markdown README.markdown
license-file: LICENSE.markdown
license: MIT
maintainer: ACI Learning

source-repository head
  location: https://github.com/EdutainmentLIVE/servant-serf
  type: git

flag pedantic
  default: False
  description: Enables @-Werror@, which turns warnings into errors.
  manual: True

library
  autogen-modules: Paths_servant_serf
  build-depends:
    base >= 4.14.0 && < 4.17
    , Cabal >= 3.2.0 && < 3.7
    , directory >= 1.3.6 && < 1.4
    , exceptions >= 0.10.4 && < 0.11
    , filepath >= 1.4.2 && < 1.5
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  exposed-modules:
    ServantSerf
    ServantSerf.Directory
    ServantSerf.Exception.ExtraArgument
    ServantSerf.Exception.InvalidDepth
    ServantSerf.Exception.InvalidModuleName
    ServantSerf.Exception.InvalidOption
    ServantSerf.Exception.MissingArgument
    ServantSerf.Exception.UnknownOption
    ServantSerf.Main
    ServantSerf.Module
    ServantSerf.Type.Config
    ServantSerf.Type.Context
    ServantSerf.Type.Depth
    ServantSerf.Type.Flag
    ServantSerf.Type.ModuleName
    ServantSerf.Version
  hs-source-dirs: source/library
  other-modules: Paths_servant_serf

  if impl(ghc >= 9.2)
    ghc-options: -Wno-missing-kind-signatures

  if flag(pedantic)
    ghc-options: -Werror

executable servant-serf
  build-depends: base, servant-serf
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs
